--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
   },
   "dependencies": {
     "expo": "~39.0.2",
+    "expo-barcode-scanner": "~9.0.0",
+    "expo-image-picker": "~9.1.0",
+    "expo-location": "~9.0.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-barcode-scanner-universal": "^1.0.5",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native-qrcode-scanner": "^1.4.1",
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
