--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "expo": "~39.0.2",
     "expo-barcode-scanner": "~9.0.0",
     "expo-image-picker": "~9.1.0",
@@ -21,7 +22,8 @@
     "react-native-qrcode-scanner": "^1.4.1",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-observable": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
